{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "7950d413-887b-4981-9af7-fd730118dcf5",
            "actions": [
                {
                    "name": "Finger1Pos",
                    "type": "Value",
                    "id": "1895c3ec-d0f6-48e5-8ac3-2236745b915b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Finger2Pos",
                    "type": "Value",
                    "id": "98d7e49a-7dde-4311-9687-80b6ceeda190",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Finger1Touch",
                    "type": "Button",
                    "id": "efe81f78-c391-473b-a181-85116f80e47b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Finger2Touch",
                    "type": "Button",
                    "id": "8b774fc1-c197-4e20-9c66-eadf47326375",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "595d511d-2140-4f49-95b6-41285be8e14d",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Finger1Pos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6d776417-e129-47e2-be1d-d9a6cca4db31",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Finger1Pos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "46e8ff8d-fda8-4e9b-a582-a94d78568c3b",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Finger2Pos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9a754454-2f87-4e84-9896-4698ba051628",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Finger1Touch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "00109904-740a-49fe-8d27-6918ac34be92",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Finger2Touch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}